Complete button styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Tic-Tac-Toe</h1>
         <div class="menu flex">
             <div class="marker flex">
-                <p>Choice:</p>
+                <p>Marker:</p>
                 <div class="buttons flex">
                     <button id="option-X">X</button>
                     <button id="option-O">O</button>
@@ -43,7 +43,7 @@
         <div class="box"></div>
     </div>
 
-    <button id="reset">Restart</button>
+    <button id="reset">restart</button>
 
 </body>
 
