--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body class="flex">
     <div class="title">
         <h1>Tic-Tac-Toe</h1>
-        <div class="menu flex">
+
+        <!-- <div class="menu flex">
             <div class="marker flex">
                 <p>Marker:</p>
                 <div class="buttons flex">
@@ -21,6 +22,8 @@
                 </div>
             </div>
 
+
+
             <div class="opponent flex">
                 <p>Opponent:</p>
                 <div class="buttons flex">
@@ -28,7 +31,9 @@
                     <button><i class="fa-solid fa-robot"></i></button>
                 </div>
             </div>
-        </div>
+
+
+        </div> -->
     </div>
 
     <div id="gameboard">
