--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <script src="https://kit.fontawesome.com/f5ed9082ee.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="./images/icon.png">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <script
+      src="https://kit.fontawesome.com/f5ed9082ee.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" href="./images/icon.png" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
     <title>Tic-Tac-Toe</title>
-</head>
+  </head>
 
-<body class="flex">
+  <body class="flex">
     <div class="title">
-        <h1>Tic-Tac-Toe</h1>
+      <h1>Tic-Tac-Toe</h1>
 
-        <!-- <div class="menu flex">
+      <!-- <div class="menu flex">
             <div class="marker flex">
                 <p>Marker:</p>
                 <div class="buttons flex">
@@ -37,19 +39,18 @@
     </div>
 
     <div id="gameboard">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+      <!-- has to be array -->
+      <div class="box o" data-index="0">o</div>
+      <div class="box x" data-index="1">x</div>
+      <div class="box" data-index="2">o</div>
+      <div class="box" data-index="3">x</div>
+      <div class="box" data-index="4">x</div>
+      <div class="box" data-index="5">x</div>
+      <div class="box" data-index="6">o</div>
+      <div class="box" data-index="7">o</div>
+      <div class="box" data-index="8">o</div>
     </div>
 
     <button id="reset">restart</button>
-
-</body>
-
+  </body>
 </html>
