--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="flex">
     <div class="title">
         <h1>Tic-Tac-Toe</h1>
-        <h2 id="game-status">X - it's your turn!</h2>
+        <h2 id="game-status"></h2>
     </div>
 
     <div id="gameboard">
