Add Github link on the bottom of the page and styling

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </div>
 
     <button id="reset">restart</button>
+
+    <a href="https://github.com/yuliana-r/tic-tac-toe" target="_blank"><i class="fab fa-github"></i> Github</a>
 </body>
 
 </html>
