Update github link and change demo image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <button id="reset">restart</button>
 
-    <a href="https://github.com/yuliana-r/tic-tac-toe" target="_blank"><i class="fab fa-github"></i> Github</a>
+    <a href="https://github.com/yuliana-r/tic-tac-toe" target="_blank"><i class="fab fa-github"></i></a>
 </body>
 
 </html>
